fix: back button mobile size in note section

--- a/src/components/Navbar/NotesSection/NotesSection.module.scss
+++ b/src/components/Navbar/NotesSection/NotesSection.module.scss
@@ -80,31 +80,25 @@
   display: flex;
   font-size: 1rem !important;
   gap: 0.5rem;
-  height: 1.5rem;
-  left: -0.5rem;
+  height: 2rem;
   margin-bottom: 1rem;
   padding: 0.0625rem 0.375rem;
-  position: absolute;
-  transform: translateX(-100%);
-  width: 1.5rem;
+  position: relative;
+  transform: none;
+  width: 2rem;
 
   &:hover {
     background-color: var(--theme-color-3);
   }
 
   svg {
-    height: 1rem;
-    width: 1rem;
+    height: 1.375rem;
+    width: 1.375rem;
   }
 
   .xSmallUp & {
-    height: 2rem;
+    position: absolute;
+    transform: translateX(-100%);
     left: -1rem;
-    width: 2rem;
-
-    svg {
-      height: 1.375rem;
-      width: 1.375rem;
-    }
   }
 }
